# bigblob-decoder

./: .gitignore  Cargo.toml  format.md
compressonator_bc7/: Cargo.toml  bindings.h  build.rs
compressonator_bc7/src/: lib.rs
src/: bc7.rs  dds.rs  encoding.rs  lib.rs  main.rs
src/bc7/: decode.rs  encode.rs
