[package]
name = "bigblob-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.26", features = ["derive"] }
deku = "0.15.0"
image = { version = "0.24.5", default-features = false, features = ["png"] }
lz4_flex = { version = "0.9.5", default-features = false, features = [
    "safe-decode",
    "std",
    "safe-encode",
] }
