[package]
name = "bigblob-decoder"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.0.29", features = ["derive"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
lz4_flex = { version = "0.9.5", default-features = false, features = [
    "safe-decode",
    "std",
    "safe-encode",
] }
compressonator_bc7 = { path = "compressonator_bc7", optional = true }
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
rayon = "1.6.1"

[features]
default = []
compressonator = ["dep:compressonator_bc7"]
